# vkapi

./: .gitignore  CMakeLists.txt  VKApi.cpp  VKApi.h  VkApi.cpp  VkApi.h
Concepts/: VkLongpoll.h
include/: URI.h  VkApi.h  VkLongpoll.h
sources/: VkApi.cpp
